--- a/src/pages/home/home.less
+++ b/src/pages/home/home.less
@@ -1,9 +1,9 @@
 @import '../../assets/styles/themeColor.less';
-@headh: 114px;
 @infow: 400px;
+@headh: 114px;
 
 // 西安首页
-.home-xian {
+.home {
   width: 100vw;
   height: 100vh;
   box-sizing: border-box;
@@ -15,8 +15,149 @@
   // 地图容器
   .mapBox {
     height: 100vh;
+
+    .anchorBL {
+      visibility: hidden;
+    }
+
+    .BMap_Marker {
+      img {
+        width: 100%;
+      }
+    }
   }
 
+  // 左边设备状态
+  .home-state {
+    width: @infow;
+    // height: 100vh;
+    background: @layoutbgcolor1;
+    position: absolute;
+    padding-left: 20px;
+    z-index: 10;
+    padding-top: @headh;
+
+    // 设备列表
+    .state-equ {
+      min-height: 200px;
+
+      .iconfont {
+        right: 4px;
+      }
+
+      .task {
+        padding: 20px;
+
+        .task-info {
+          height: 60px;
+          line-height: 60px;
+          background: url(../../assets/images/home/taskbg1.png) no-repeat center;
+          background-size: 100% 100%;
+          margin-bottom: 20px;
+          text-indent: 70px;
+          position: relative;
+
+          .info-label {
+            margin-right: 4px;
+          }
+
+          .info-value {
+            color: #e5ff55;
+            font-size: 20px;
+            padding-left: 10px;
+          }
+
+          ::after {
+            content: '';
+            width: 60px;
+            height: 60px;
+            position: absolute;
+            left: 15px;
+            top: 0;
+          }
+        }
+
+      }
+
+
+    }
+
+    .state-echarts {
+      height: 240px;
+    }
+  }
+
+  .rightButton {
+    position: absolute;
+    right: 0;
+    padding-top: @headh;
+    top: 0;
+    color: @textColor;
+    z-index: 10;
+    padding-right: 20px;
+    display: flex;
+    flex-flow: column;
+    width: 40px;
+
+    :where(.css-dev-only-do-not-override-nnuwmp).ant-badge {
+      color: @textColor
+    }
+
+  }
+
+  .rightBox {
+    width: @infow;
+    margin-top: @headh;
+    margin-right: 40px;
+    height: 80vh;
+    background: @layoutbgcolor1;
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 10;
+  }
+
+  .realtime {
+    background: url(../../assets/images/home/equ-statebg4.png) no-repeat center;
+    background-size: 100% 100%;
+    display: flex;
+    height: 200px;
+
+    .realtime-info {
+      text-align: center;
+      width: 33%;
+      padding-top: 25px;
+
+      .infoLabel {
+        background: url(../../assets/images/home/equ-statebg2.png) no-repeat center;
+        background-size: 100% 100%;
+        height: 80px;
+        cursor: pointer;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        .label {
+          display: flex;
+          text-align: center;
+          align-items: center;
+          justify-content: center;
+          height: 100%;
+          font-size: 18px;
+          line-height: 40px;
+          font-family: -moz-initial;
+          font-weight: bold;
+        }
+      }
+
+      .info-value {
+        font-weight: bold;
+        margin-top: 5px;
+        color: #47c3f7;
+      }
+
+    }
+  }
+
+
 }
-
-
