--- a/src/pages/components/pannel/pannel.less
+++ b/src/pages/components/pannel/pannel.less
@@ -1,6 +1,5 @@
 .pannel {
   overflow: hidden;
-  transition: all .4s;
 
   .pannel-title {
     height: 34px;
@@ -15,8 +14,6 @@
       color: #ffffff50;
       font-weight: normal;
       font-size: 24px;
-      animation: flash 2s infinite;
-      -webkit-animation: flash 2s infinite;
     }
 
     .left {
@@ -41,4 +38,8 @@
   .showBox {
     height: 100%;
   }
+}
+
+.animate__fadeInDown {
+  animation-duration: 0.1s;
 }
