--- a/src/pages/components/basicInformation/basicInformation.less
+++ b/src/pages/components/basicInformation/basicInformation.less
@@ -2,8 +2,13 @@
   display: flex;
   padding: 6px;
   justify-content: space-between;
-  width: 60%;
   margin: auto;
+  margin: 0 20px;
+
+
+  .left {
+    float: left;
+  }
 
   .right {
     color: aquamarine;
