--- a/src/pages/coverageRate/coverageRate.less
+++ b/src/pages/coverageRate/coverageRate.less
@@ -46,6 +46,76 @@
         right: 4px;
       }
 
+      .baseInfo {
+        display: flex;
+        padding: 10px 0;
+        justify-content: space-between;
+        position: relative;
+
+        .base {
+          font-size: 20px;
+        }
+
+        .base_more {
+          font-size: 12px;
+          display: flex;
+          align-items: flex-end;
+          cursor: pointer;
+        }
+
+        .base_more:hover {
+          color: @primaryColor;
+        }
+
+
+      }
+
+      .history {
+        min-height: 400px;
+        padding-bottom: 40px;
+      }
+
+      .analyze {
+        position: absolute;
+        bottom: 0;
+        width: 80%;
+      }
+    }
+
+    .task {
+      padding: 20px;
+
+      .task-info {
+        height: 40px;
+        line-height: 40px;
+        background: url(../../assets/images/home/taskbg1.png) no-repeat center;
+        background-size: 100% 100%;
+        margin-bottom: 20px;
+        text-indent: 70px;
+        position: relative;
+        display: flex;
+        justify-content: space-between;
+
+        .info-label {
+          margin-right: 4px;
+        }
+
+        .info-value {
+          color: #e5ff55;
+          font-size: 20px;
+          padding-right: 40px;
+        }
+
+        ::after {
+          content: '';
+          width: 60px;
+          height: 60px;
+          position: absolute;
+          left: 15px;
+          top: 0;
+        }
+      }
+
     }
   }
 
