--- a/src/pages/deviceDetails/deviceDetails.less
+++ b/src/pages/deviceDetails/deviceDetails.less
@@ -33,4 +33,27 @@
 
     }
   }
+
+  .flow {
+    margin-left: 440px;
+    margin-top: @headh ;
+    height: 500px;
+    display: flex;
+    justify-content: space-between;
+
+    .flow_content {
+      position: relative;
+      width: 70%;
+      height: 500px;
+      background: url('../../assets/images/home/equ-statebg3.png') no-repeat center;
+      background-size: 100% 100%;
+    }
+
+    .right-state {
+      padding-right: 20px;
+      width: 400px
+    }
+
+  }
+
 }
