--- a/src/assets/styles/themeColor.less
+++ b/src/assets/styles/themeColor.less
@@ -43,3 +43,5 @@
 @layoutbgcolor: linear-gradient(180deg, #0a1430 0%, #0a143001 100%);
 @layoutbgcolor1: linear-gradient(90deg, #0a1430 0%, #0a143001 100%);
 @layoutbgcolor2: linear-gradient(-90deg, #0a1430 0%, #0a143001 100%);
+
+@bgtransparent: rgba(119, 119, 119, 0.2);
