--- a/src/pages/components/basicInformation/basicInformation.less
+++ b/src/pages/components/basicInformation/basicInformation.less
@@ -1,3 +1,5 @@
+@import '../../../assets/styles/themeColor.less';
+
 .baseItem {
   display: flex;
   padding: 6px;
@@ -11,6 +13,6 @@
   }
 
   .right {
-    color: aquamarine;
+    color: @textLightColor;
   }
 }
