--- a/src/pages/components/pannel/pannel.less
+++ b/src/pages/components/pannel/pannel.less
@@ -1,3 +1,4 @@
+@import '../../../assets/styles/themeColor.less';
 .pannel {
   position: relative;
 
@@ -11,7 +12,7 @@
     .iconfont {
       position: absolute;
       right: 10px;
-      color: #ffffff50;
+      color: @textDisableColor;
       font-weight: normal;
       font-size: 24px;
     }
