--- a/src/pages/components/rightButton/rightButton.less
+++ b/src/pages/components/rightButton/rightButton.less
@@ -29,6 +29,6 @@
   height: 30px;
   display: flex;
   align-items: center;
-  background-color: #5871806b;
+  background-color: @backgHoverColor;
   border-radius: 5px;
 }
