--- a/src/pages/coverageRate/coverageRate.less
+++ b/src/pages/coverageRate/coverageRate.less
@@ -101,7 +101,7 @@
         }
 
         .info-value {
-          color: #e5ff55;
+          color: @warning-color;
           font-size: 20px;
           padding-right: 40px;
         }
