--- a/src/pages/home/home.less
+++ b/src/pages/home/home.less
@@ -3,7 +3,7 @@
 @headh: 114px;
 
 .ant-input {
-  background-color: rgba(119, 119, 119, 0.2) !important;
+  background-color: @bgtransparent !important;
 }
 
 // 西安首页
@@ -145,7 +145,7 @@
         background-size: 100% 100%;
         text-align: center;
         cursor: pointer;
-        color: #bccef3;
+        color: @textColor1;
         position: relative;
         padding-top: 32%;
         font-weight: bold;
@@ -171,7 +171,7 @@
         background-size: 100% 100%;
         text-align: center;
         cursor: pointer;
-        color: #bccef3;
+        color: @textColor1;
         position: relative;
         padding-top: 32%;
         font-weight: bold;
@@ -212,7 +212,7 @@
           overflow: hidden;
           white-space: pre-wrap;
           text-overflow: ellipsis;
-          color: #ff4d4f;
+          color: @error-color;
           font-family: -moz-initial;
           font-weight: bold;
         }
@@ -267,7 +267,7 @@
       .info-value {
         font-weight: bold;
         margin-top: 5px;
-        color: #47c3f7;
+        color: @textLightColor;
       }
 
     }
