--- a/src/pages/routine/routine.less
+++ b/src/pages/routine/routine.less
@@ -85,7 +85,7 @@
         }
 
         .info-value {
-          color: #deedf8;
+          color: @textColor1;
         }
 
         .info_icon {
@@ -164,7 +164,7 @@
         background-size: 100% 100%;
         text-align: center;
         cursor: pointer;
-        color: #bccef3;
+        color: @textColor1;
         position: relative;
         padding-top: 32%;
         font-weight: bold;
