--- a/src/pages/singleFrequency/singleFrequency.less
+++ b/src/pages/singleFrequency/singleFrequency.less
@@ -37,7 +37,7 @@
         }
 
         .info-value {
-          color: #e5ff55;
+          color: @warning-color;
           font-size: 20px;
           padding-left: 10px;
         }
