--- a/src/components/BaiduMap/BaiduMap.less
+++ b/src/components/BaiduMap/BaiduMap.less
@@ -29,5 +29,5 @@
 
 img[src="http://webmap0.bdimg.com/image/api/iw_tail.png"] {
   content: url('../../assets/images/map/arrow.png');
-  content-visibility: hidden;
+  content-visibility: hidden !important;
 }
