--- a/src/pages/home/home.less
+++ b/src/pages/home/home.less
@@ -191,10 +191,10 @@
     }
 
     .monitoring {
-      border-radius: 10px;
-      height: 370px;
+      // border-radius: 10px;
+      // height: 100px;
       border: solid 1px @inputBorderColor; // 输入框边框线;
-      margin: 10px;
+      // margin: 10px;
     }
 
     .forewarning {
